package org.hui.java.jvm;

public abstract class AbstractClass {
    public abstract void m();
}
